Revert "Merge branch 'main' of https://github.com/UdeeshaRukshan/CSSE into niklesh"
This reverts commit 7a33ea09a89cb99d63f0238f035465bd26ec0833, reversing
changes made to 0afd5a65760c9981b0e1f718ff258a3dcba29c53.

--- a/app/globals.css
+++ b/app/globals.css
@@ -290,7 +290,7 @@
 .react-datepicker__day-name,
 .react-datepicker__day,
 .react-datepicker-time__header {
-  background-color: #272b30 !important;
+  background-color: #1a1d21 !important;
   border-color: #363a3d !important;
   color: #abb8c4 !important;
 }
